panko/tests/testsuite/snapshots/testsuite__preprocess-panko__tests__cases__execute__preprocessor__include__test_include_header_with_macro_in_name.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=preprocess"
    - "--stop-after=preprocess"
    - panko/tests/cases/execute/preprocessor/include/test_include_header_with_macro_in_name.c
---
success: true
exit_code: 0
----- stdout -----






















int main() {
    return 0 | 1;
}

----- stderr -----
