panko/tests/testsuite/snapshots/testsuite__preprocess-panko__tests__cases__execute__preprocessor__include__test_include_macro_bracketed.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=preprocess"
    - "--stop-after=preprocess"
    - panko/tests/cases/execute/preprocessor/include/test_include_macro_bracketed.c
---
success: true
exit_code: 0
----- stdout -----





















int printf(char const*, ...);

int main() {

    printf("%b\n", 0b1001 | 0b0110);
}

----- stderr -----
