panko/tests/testsuite/snapshots/testsuite__preprocess-panko__tests__cases__execute__preprocessor__include__test_include_quoted_falls_back_to_bracketed.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=preprocess"
    - "--stop-after=preprocess"
    - panko/tests/cases/execute/preprocessor/include/test_include_quoted_falls_back_to_bracketed.c
---
success: true
exit_code: 0
----- stdout -----
























typedef typeof((char*)nullptr - (char*)nullptr) ptrdiff_t;
typedef typeof(sizeof(char)) size_t;


typedef long long max_align_t;

typedef int wchar_t;
typedef typeof(nullptr) nullptr_t;








int main() {
    int xs[] = {1, 2};
    return _Generic(sizeof 42, size_t: 0) || _Generic(&xs[1] - &xs[0], ptrdiff_t: 1);
}

----- stderr -----
